--- a/package.json
+++ b/package.json
@@ -2,14 +2,19 @@
   "name": "backend_project",
   "version": "1.0.0",
   "description": "Backend Project",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon src/index.js"
   },
   "keywords": [
     "Js",
     "backend"
   ],
   "author": "Manas Bhardwaj",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.10"
+  }
 }
